--- a/Accelerate-Precoursework/index.html
+++ b/Accelerate-Precoursework/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<!-- HEAD Section -->
 <head>
   <title>About Me</title>
   <meta charset="utf-8"/>
+
+  <!-- LINK Section -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
@@ -22,12 +25,14 @@
   </div>
 </section> 
 
+ <!-- INTRODUCTION Section -->
 <div class="container">
 <h1 class="page-title">INTRODUCTION</h1>
 <hr>
 <p class="page-description">Hi I'm Edith. I wanted to learn coding because I want to be part of the future. So I am here!</p>
 </div>
 
+ <!-- Gallery Section -->
 <section class="container">
         <h1 class="page-title">GALLERY</h1>
               <hr>
@@ -60,7 +65,7 @@
     </figure>
   </div>
 
-<!-- Portfolio Section -->
+<!-- HOBBIES Section -->
 <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
@@ -112,6 +117,7 @@
   </div>
 </div>
 
+ <!-- FOOTER Section -->
 </section>
   <footer class="container">
   <div class="row">
